Fix content width issue on small screen

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,7 +16,7 @@ main {
 
 .content {
   justify-content: space-around;
-  width: 100%;
+  max-width: 100%;
   flex: 1 1 auto;
   background-color: black;
   align-content: center;
